# CoreMaker-01

./: .gitignore  CMakeLists.txt
APP_FACTORY/: CMakeLists.txt  factoryConfig.h.in  main.cpp
APP_HELLOWORLD/: CMakeLists.txt  helloWorld.cpp  helloWorldConfig.h.in
